# 2ndSemPractical

./: .gitignore  CMakeLists.txt  README.md  call.c  del.c  eval.c  evenodd.c  factorial.c  fib.c  insert.c  linear.c  mat.c  stringrev.c  triangle.c
Algo/: del.htm  eval.htm  evenodd.htm  factDigitCount.htm  factTrailingZeroCount.htm  factorial.htm  fib.htm  global-styles.css  insert.htm  linear.htm  main.html  mat.htm  stringrev.htm  triangle.htm
CSrc/: call.c  del.c  eval.c  evenodd.c  factDigitCount.c  factTrailingZeroCount.c  fib.c  insert.c  linear.c  mat.c  stringrev.c  triangle.c
Printable/: delHTMLCSrc.html  main.html
Printable/C/: Assignment-Style.css  callHTMLCSrc.htm  delHTMLCSrc.htm  evalHTMLCSrc.htm  evenoddHTMLCSrc.htm  factDigitCountHTMLCSrc.htm  factTrailingZeroCountHTMLCSrc.htm  factorialHTMLCSrc.htm  fibHTMLCSrc.htm  insertHTMLCSrc.htm  linearHTMLCSrc.htm  matHTMLCSrc.htm  stringrevHTMLCSrc.htm  triangleHTMLCSrc.htm
Printable/Theory/: Assignment-Style.css  callHTMLTheory.htm  delHTMLTheory.htm  evalHTMLTheory.htm  evenoddHTMLTheory.htm  factDigitCountHTMLTheory.htm  factTrailingZeroCountHTMLTheory.htm  factorialHTMLTheory.htm  fibHTMLTheory.htm  insertHTMLTheory.htm  linearHTMLTheory.htm  matHTMLTheory.htm  stringrevHTMLTheory.htm  triangleHTMLTheory.htm
util/: FileList.txt  GenHTML.py  UpdateCSrc.py
